unpackaged/main/default/objects/CMPL123CME__Report_Mapping__c/CMPL123CME__Report_Mapping__c.object-meta.xml
<CustomObject>
    <description>Report Mapping</description>
    <label>Report Mapping</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>