unpackaged/main/default/objects/CMPL123CME__Report_Mapping__c/fields/CMPL123CME__Mapping_Json__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Mapping_Json__c</fullName>
        <label>Mapping Json</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </CustomField>