unpackaged/main/default/objects/CMPL123CME__Report_Mapping__c/fields/CMPL123CME__Related_Object_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Related_Object_Name__c</fullName>
        <description>Related Object Name</description>
        <inlineHelpText>Related Object Name</inlineHelpText>
        <label>Related Object Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>