unpackaged/main/default/objects/CMPL123CME__Report_Mapping__c/fields/CMPL123CME__Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Type__c</fullName>
        <label>Type</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>